browser/themes/shared/preferences/preferences.css
/* ... */
.sync-engine-addresses .checkbox-icon,
.sync-engine-addresses.sync-engine-image {
  list-style-image: url("chrome://formautofill/content/formfill-anchor.svg");
}

.sync-engine-creditcards .checkbox-icon,
.sync-engine-creditcards.sync-engine-image {
  list-style-image: url("chrome://formautofill/content/icon-credit-card-generic.svg");
}

.fxaMobilePromo {
  margin-top: 2px !important;
  margin-bottom: var(--space-xxlarge);
}

.androidIcon,
.iOSIcon {
  margin-inline: 2px 4px;
  width: var(--icon-size-medium);
  height: var(--icon-size-medium);
  vertical-align: text-bottom;
}

.update-throbber {
  width: 1.3em;
  min-height: 1.3em;
  margin-inline-end: 8px;
  content: url("chrome://global/skin/icons/loading.svg");
  -moz-context-properties: fill;
  fill: var(--color-accent-primary);
}

.navigation {
  overflow-x: hidden;
  overflow-y: auto;
  position: relative;
}

@media (prefers-reduced-motion) {
  /* Setting border-inline-end on .navigation makes it a focusable element */
  .navigation::after {
    content: "";
    width: 1px;
    height: 100%;
    /* stylelint-disable-next-line stylelint-plugin-mozilla/no-non-semantic-token-usage */
    background-color: var(--border-color);
    top: 0;
    inset-inline-end: 0;
    position: absolute;
  }
}

.face-sad::before {
  content: "\01F641";
  font-size: 1.3em;
  margin-inline-end: 8px;
}

.face-smile::before {
  content: "\01F600";
  font-size: 1.3em;
  margin-inline-end: 8px;
}

#policies-container,
#searchInput {
  min-height: 32px;
  margin: 20px 0 30px;
}

#policies-container {
  margin-inline-end: var(--space-large);
  /* Make sure the container is at least the same height as the searchbox.
     This is needed in addition to the min-height above to make the info icon
     the same height as the first line in the policies label.
     Searchbox's height - line-height - border top and bottom */
  padding-block: max(0px, calc((32px - 1.8em - 2px) / 2));
}

.info-box-container {
  background-color: var(--background-color-box-info);
  padding: 9px;
  border: 1px solid transparent;
  border-radius: var(--border-radius-small);
}

.info-box-container.smaller-font-size {
  font-size: 85%;
}

.info-icon-container {
  display: flex;
}

.info-icon {
  content: url("chrome://global/skin/icons/info.svg");
  width: 16px;
  height: 16px;
  margin-inline-end: 6px;
  align-self: start;
  margin-top: 0.4em;
  flex-shrink: 0;
}

.info-box-container.smaller-font-size .info-icon {
  margin-top: 0.3em;
}

.sticky-container {
  position: sticky;
  background-color: var(--background-color-canvas);
  top: 0;
  z-index: 1;
  /* The sticky-container should have the capability to cover all spotlight area. */
  width: calc(100% + 8px);
  margin-inline: -4px;
  padding-inline: 4px;
}

.sticky-inner-container {
  flex: 1;
  max-width: var(--page-main-content-width);
}

#search-tooltip-container {
  position: relative;
  top: 0;
}

.search-tooltip {
  max-width: 10em;
  font-size: 1rem;
  position: absolute;
  padding: 0 0.7em;
  background-color: #ffe900;
  color: #000;
  border: 1px solid #d7b600;
  margin-top: -18px;
  opacity: 0.85;
  z-index: 1;
}

.search-tooltip:hover {
  opacity: 0.1;
}

.search-tooltip::before {
  position: absolute;
  content: "";
  border: 7px solid transparent;
  border-top-color: #d7b600;
  top: 100%;
  inset-inline-start: calc(50% - 7px);
  forced-color-adjust: none;
}

.search-tooltip::after {
  position: absolute;
  content: "";
  border: 6px solid transparent;
  border-top-color: #ffe900;
  top: 100%;
  inset-inline-start: calc(50% - 6px);
  forced-color-adjust: none;
}

@media (forced-colors: active) {
  .search-tooltip::before {
    border-top-color: CanvasText;
  }

  .search-tooltip::after {
    border-top-color: Canvas;
  }
}

.search-tooltip-parent {
  position: relative;
}

.search-tooltip > span {
  display: block;
  user-select: none;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.visually-hidden {
  display: none !important;
}

menulist[indicator="true"] > menupopup menuitem:not([image]) > .menu-icon {
  display: flex;
  min-width: auto; /* Override the min-width defined in menu.css */
  margin-inline-end: 6px;
  width: 8px;
  height: 10px;
}

menulist[indicator="true"] > menupopup menuitem[indicator="true"]:not([image]) > .menu-icon {
  list-style-image: url(chrome://browser/skin/preferences/search-arrow-indicator.svg);

  &:-moz-locale-dir(rtl) {
    transform: scaleX(-1);
  }
}

.menu-highlightable-text {
  margin: 0; /* Align with the margin of xul:label.menu-text */
}

#no-results-message > label {
  margin: 2px 0;
}

/* Proxy port input */

.proxy-port-input {
  width: calc(5ch + 18px); /* 5 chars + (8px padding + 1px border) on both sides */
  margin-inline-start: 4px;
}

#primaryBrowserLocale {
  margin-inline-start: 0;
  min-width: 20em;
}

#availableLanguages,
#availableLocales {
  margin-inline-start: 0;
}

#availableLanguages,
#availableLocales,
#activeLanguages,
#selectedLocales {
  margin-inline-end: 4px;
}

#activeLanguages,
#selectedLocales {
  min-height: 15em;
  contain: size;
}

#selectedLocales > richlistitem {
  padding-inline-start: 13px;
}

#warning-message > .message-bar-description {
  width: 32em;
}

#warning-message {
  margin-top: 8px;
}

.action-button {
  margin-inline-end: 0;
}

.languages-grid {
  flex: 1;
  display: grid;
  grid-template-rows: 1fr auto;
  grid-template-columns: 1fr auto;
}

/* Menulist styles */
.label-item {
  font-size: 0.8em;
}

.updateSettingCrossUserWarningContainer {
  margin-block-end: 17px;
}

#updateSettingCrossUserWarningDesc {
  padding-inline-start: calc(16px + 6px); /* radio-check's width + margin-inline-end */
  margin-block-start: 20px;
}

richlistitem .text-link {
  color: inherit;
  text-decoration: underline;
}

richlistitem .text-link:hover {
  color: inherit;
}

#proxy-grid,
#dnsOverHttps-grid {
  display: grid;
  grid-template-columns: auto 1fr;
  align-items: center;
}
/* ... */

